[gd_scene load_steps=5 format=3 uid="uid://cexoymev1w5bp"]

[ext_resource type="Script" uid="uid://cu0rdtkofgjp5" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://0d5wb838mpvy" path="res://scenes/dot.tscn" id="2_jyhfs"]
[ext_resource type="Texture2D" uid="uid://cpdpuwty1cr4d" path="res://assets/graphics/grass_bg.png" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://3pnb1rxgdeay" path="res://scenes/player.tscn" id="3_tbgi4"]

[node name="Main" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_sugp2")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324)
texture = ExtResource("2_tbgi4")

[node name="Dot" parent="." instance=ExtResource("2_jyhfs")]
position = Vector2(432, 151)

[node name="Dot2" parent="." instance=ExtResource("2_jyhfs")]
position = Vector2(544, 207)

[node name="Player" parent="." instance=ExtResource("3_tbgi4")]
position = Vector2(73, 46)

[node name="Score_Display" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Score:"

[node name="Health_Display" type="Label" parent="."]
visible = false
offset_left = 1080.0
offset_top = 7.0
offset_right = 1136.0
offset_bottom = 30.0
text = ":Health"

[node name="Game_audio_player" type="AudioStreamPlayer2D" parent="."]
